pom autism fix